--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -11,7 +11,7 @@
   <ion-row class="ion-justify-content-center ion-padding">
     <ion-col size="12" size-md="8" text-center>
       <h2 class="welcome-title">Bienvenido, </h2>
-      <h3 class="welcome-subtitle">{{ username }}</h3>
+      <h3 class="welcome-subtitle">{{ tecnico?.nombre }}</h3>
     </ion-col>
   </ion-row>
 
@@ -38,38 +38,7 @@
 </ion-card>
 
   </ion-content>
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Historial de Visitas</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-list>
-        <ion-item *ngFor="let visita of visitas">
-          <ion-label>
-            <h2>{{ visita.cliente }}</h2>
-            <p><strong>Solicitante:</strong> {{ visita.solicitante }}</p>
-            <p><strong>Inicio:</strong> {{ formatoFecha(visita.inicio) }}</p>
-            <p><strong>Fin:</strong> {{ formatoFecha(visita.fin) }}</p>
-            <p><strong>Actividades:</strong>
-              <span *ngIf="visita.impresoras">🖨️ Impresoras </span>
-              <span *ngIf="visita.telefonos">📞 Teléfonos IP </span>
-              <span *ngIf="visita.pie">🖋️ Pie de página </span>
-              <span *ngIf="visita.otros">📝 Otros: {{ visita.otrosDetalle }}</span>
-            </p>
-            <p><strong>Realizado:</strong> {{ visita.realizado }}</p>
-          </ion-label>
-
-          <ion-button fill="clear" color="danger" (click)="eliminarVisita(visita)">
-            <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-          </ion-button>
-        </ion-item>
-
-        <ion-item *ngIf="visitas.length === 0">
-          <ion-label>No hay visitas registradas.</ion-label>
-        </ion-item>
-      </ion-list>
-    </ion-card-content>
-  </ion-card>
+  
 
   <ion-button class="btn-cerrar-sesion" expand="block" (click)="cerrarSesion()">
     <ion-icon name="log-out-outline" slot="start"></ion-icon>
