arreglos y re diseño de historial

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
         <h1>Iniciar Sesión</h1>
         <p>Accede a tu cuenta</p>
       </div>
-
+      <!-- Formulario de login -->
       <form (ngSubmit)="login()" #loginForm="ngForm" class="login-form">
         <ion-item class="form-item">
           <ion-label position="stacked">Usuario</ion-label>
