--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -32,7 +32,7 @@
     font-style: italic;
   }
 }
-
+// Tarjeta de login
 .login-card {
   background: white;
   border-radius: 15px;
@@ -57,6 +57,7 @@
   }
 }
 
+// Estilos para el formulario de login
 .login-form {
 
   .form-item {
@@ -129,7 +130,7 @@
   }
 }
 
-
+// Contenedor de la imagen principal
 .home-image-container {
   text-align: center;
   margin-bottom: 30px;
