--- a/src/app/pages/inicio-footer/inicio-footer.page.html
+++ b/src/app/pages/inicio-footer/inicio-footer.page.html
@@ -1,8 +1,8 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Inicio</ion-title>
+  <ion-toolbar class="custom-header-toolbar">
+    <ion-title class="header-title">Perfil de Usuario</ion-title>
     <ion-buttons slot="end">
-      <img src="assets/img/LOGO_RIDS.png" alt="Logo RIDS" style="height: 40px;" />
+      <img src="assets/img/LOGO_RIDS.png" alt="Logo RIDS" style="height: 38px;" class="header-logo"/>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -78,7 +78,6 @@
           </ion-row>
         </ion-grid>
       </ion-card>
-
     </ion-grid>
   </ion-card>
 </ion-content>
