--- a/src/app/pages/formulario-visitas/formulario-visitas.page.html
+++ b/src/app/pages/formulario-visitas/formulario-visitas.page.html
@@ -1,8 +1,8 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Registro de Visitas</ion-title>
+  <ion-toolbar class="custom-header-toolbar">
+    <ion-title class="header-title">Registro de Visitas</ion-title>
     <ion-buttons slot="end">
-      <img src="assets/img/LOGO_RIDS.png" alt="Logo RIDS" style="height: 38px;" />
+      <img src="assets/img/LOGO_RIDS.png" alt="Logo RIDS" style="height: 38px;" class="header-logo" />
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -11,8 +11,8 @@
   <!-- Estado -->
   <ion-card>
     <ion-card-header>
-      <ion-card-title>{{ estado }}</ion-card-title>
-      <ion-card-subtitle>{{ estadoTexto }}</ion-card-subtitle>
+      <ion-card-title>{{ estado }}</ion-card-title> <!-- Mostrar estado actual -->
+      <ion-card-subtitle>{{ estadoTexto }}</ion-card-subtitle> 
     </ion-card-header>
     <ion-card-content>
       <p><strong>Inicio:</strong> {{ inicio | date:'dd/MM/yyyy HH:mm' }}</p>
