--- a/src/app/pages/formulario-visitas/formulario-visitas.page.scss
+++ b/src/app/pages/formulario-visitas/formulario-visitas.page.scss
@@ -17,36 +17,33 @@ ion-content {
     }
 }
 
+.custom-header-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 16px;
+
+  .header-title {
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #000000;
+    text-align: left;
+    white-space: nowrap; /* Evita que se divida en varias líneas */
+    overflow: hidden;
+    text-overflow: ellipsis; /* Agrega "..." si se pasa */
+  }
+
+  .header-logo {
+    height: 38px;
+    max-width: 120px;
+    object-fit: contain;
+  }
+}
+
 ion-card-title {
     font-size: 1.4rem;
     font-weight: 600;
     color: #1976d2;
-}
-
-ion-header {
-    text-align: center;
-    box-shadow: 0 4px 12px rgba(20, 143, 201, 0.2);
-    background: rgba(255, 255, 255, 0.95);
-    backdrop-filter: blur(8px);
-
-    ion-title {
-        font-size: 1.6rem;
-        font-weight: 700;
-        color: #000000;
-        transition: all 0.3s;
-    }
-}
-
-.formulario-image {
-    img {
-        max-width: 95px;
-        height: auto;
-        opacity: 1;
-    }
-
-    img:hover {
-        transform: rotate(-5deg) scale(1.05);
-    }
 }
 
 ion-card {
