arreglo modo oscuro

--- a/src/app/components/footer-menu/footer-menu.component.scss
+++ b/src/app/components/footer-menu/footer-menu.component.scss
@@ -1,5 +1,5 @@
 .custom-footer { 
-  position: relative;// No uses 'absolute' para que no tape contenido
+  position: relative;
   width: 100%;
   z-index: 100;
 
