--- a/src/app/pages/formulario-visitas/formulario-visitas.page.scss
+++ b/src/app/pages/formulario-visitas/formulario-visitas.page.scss
@@ -26,7 +26,7 @@ ion-content {
   .header-title {
     font-size: 1.4rem;
     font-weight: 700;
-    color: #000000;
+    color: #1976d2;
     text-align: left;
     white-space: nowrap; /* Evita que se divida en varias líneas */
     overflow: hidden;
