--- a/src/app/pages/perfil/perfil.page.scss
+++ b/src/app/pages/perfil/perfil.page.scss
@@ -26,7 +26,7 @@ ion-content {
     .header-title {
         font-size: 1.4rem;
         font-weight: 700;
-        color: #000000;
+        color: #1976d2;
         text-align: left;
         white-space: nowrap;
         /* Evita que se divida en varias líneas */
@@ -96,8 +96,7 @@ ion-card {
         text-align: center;
         background: #1976d2;
         color: white;
-        border-top-left-radius: 12px;
-        border-top-right-radius: 12px;
+        border-radius: 12px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 }
