--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,26 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+/* Estilos globales */
+body {
+    background-color: var(--ion-background-color);
+    color: var(--ion-text-color);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: var(--ion-text-color);
+}
+
+p {
+    color: var(--ion-text-color);
+}
+
+li {
+    color: var(--ion-text-color);
+}
